--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,4 @@
 {
-  "stage": 0,
-  "plugins": ["./build/babelRelayPlugin"],
-  "env": {
-    "development": {
-      "plugins": ["react-transform"],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
-    }
-  }
+  "presets": ["es2015"]
 }
+
