--- a/package.json
+++ b/package.json
@@ -32,20 +32,25 @@
     "react": "^0.14.0-rc1",
     "react-dom": "^0.14.0-rc1",
     "react-relay": "^0.8.1",
-    "reindex-js": "^0.3.1"
+    "react-stamp": "^0.5.1",
+    "reindex-js": "^0.3.1",
+    "stampit": "^3.0.0-rc.3"
   },
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-relay-plugin": "^0.8.1",
+    "babelify": "^7.3.0",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
     "style-loader": "^0.12.4",
+    "tape": "^4.5.1",
     "webpack": "^1.12.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
